--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+src/main/web/node/
+src/main/web/node_modules/
+src/main/resources/app-bundle.js
+src/main/web/package-lock.json
